<resources>

    <string name="app_name">ProjetoTCC</string>

    <string name="app_texto_Ola">Olá</string>
    <string name="app_texto_Bem_vindo_de_Volta">Bem vindo de volta!</string>
    <string name="app_texto_Nome_projeto">Solo Craft</string>
    <string name="app_texto_Seja_Bem_Vindo">Seja bem vindo!</string>

    <string name="app_campo_email">E-mail:</string>
    <string name="app_campo_usuario">Usuário:</string>
    <string name="app_campo_senha">Senha:</string>
    <string name="app_campo_nomeUsuario">Nome do usuario:</string>
    <string name="app_campo_esqueciSenha">Esqueci a senha </string>

    <string name="app_componente_servico_pendente">Serviços Pendentes</string>
    <string name="app_componente_servico_concluidos">Serviços Concluídos</string>
    <string name="app_componente_seus_clientes">Seus Clientes</string>

    <string name="app_botao_login">Login</string>
    <string name="app_botao_criar_conta">Criar Conta</string>
    <string name="app_botao_comecar">Começar</string>
    <string name="app_botao_entrar">Entrar</string>
    <string name="app_botao_servico">Novo Serviço</string>

    <string name="app_novoServico_titulo_error">Erro ao cadastrar, insira um titulo valido</string>
    <string name="app_novoServico_descricao_error">Erro ao cadastrar, insira uma descrição valida</string>
    <string name="app_novoServico_valorServico_error">Erro ao cadastrar, insira um valor de serviço</string>
    <string name="app_novoServico_custoAtual_error">Erro ao cadastrar, insira um custo inicial valido</string>
    <string name="app_novoServico_enderecoServico_error">Erro ao cadastrar, insira um endereco valido</string>
    <string name="app_novoServico_dataInicio_error">Erro ao cadastrar, insira uma data de inicio valida</string>
    <string name="app_novoServico_nomeCliente_error">Erro ao cadastrar, insira um nome de cliente valido</string>
    <string name="app_novoServico_telefoneCliente_error">Erro ao cadastrar, insira um telefone de cliente valido</string>
    <string name="app_novoServico_enderecoCliente_error">Erro ao cadastrar, insira um endereco de cliente valido</string>

    <string name="app_detalhesServico_BotaoExcluir_error">Erro ao excluir, tente novamente</string>
    <string name="app_detalhesServico_BotaoExcluir_sucesso">Sucesso ao excluir tarefa</string>
    <string name="app_detalhesServico_BotaoFinalizar_sucesso">Sucesso ao finalizar tarefa</string>
    <string name="app_detalhesServico_BotaoFinalizar_error"> Erro ao finalizar servico, tente novamente</string>

    <string name="app_adicionarCusto_Adicionar_sucesso">Sucesso ao adicionar custo</string>
    <string name="app_adicionarCusto_Adicionar_error">Erro ao adicionar custo</string>

    <string name="app_relatorioDetails_busca_error">Não foi possivel encontrar relatorio para esta tarefa</string>

    <string name="app_mensagem_sucessoCriacao">Conta criada com sucesso!</string>
    <string name="app_mensagem_erroNomeOnboarding">Erro ao cadastrar, insira um nome válido</string>
    <string name="app_mensagem_erroEmailOnboarding">Erro ao cadastrar, insira um email válido</string>
    <string name="app_mensagem_erroPasswordOnboarding">Erro ao cadastrar, insira uma senha válida</string>
    <string name="app_mensagem_erroGeralCriacao">Erro ao cadastrar, conta já existe</string>
    <string name="app_mensagem_erroCamposCriacao">Erro ao cadastrar, campos vazios</string>

    <string name="app_mensagem_erroEmailLogin">Erro ao logar, insira um email válido</string>
    <string name="app_mensagem_erroPasswordLogin">Erro ao logar, insira uma senha válida</string>
    <string name="app_mensagem_sucessoLogin">Login realizado com sucesso!</string>
    <string name="app_mensagem_erroLogin">Erro ao logar, insira dados válidos</string>
    <string name="app_mensagem_erroLoginInvalido">Erro ao logar, tente novamente mais tarde</string>

</resources>