<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/splash"
        android:layout_width="179dp"
        android:layout_height="179dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/texto_SoloCraft"
        android:src="@drawable/ferramenta"
        />

    <TextView
        android:id="@+id/texto_SoloCraft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:text="@string/app_texto_Nome_projeto"
        android:textColor="@color/white"
        android:fontFamily="@font/bonheurroyaleregular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/buttonComecar"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:text="@string/app_botao_comecar"
        android:backgroundTint="@color/BotaoComecar"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_SoloCraft"
        app:layout_constraintBottom_toTopOf="@id/buttonEntrar"/>

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:textColor="@color/BotaoPrincipal"
        android:text="@string/app_botao_entrar"
        android:backgroundTint="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto_SoloCraft"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>